[package]
name = "lockbox_v1"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2b_simd = "1.0.3"
ff = "^0.13"
group = "^0.13"
halo2_gadgets = "0.3.1"
halo2_proofs = "^0.3"
hex = "0.4.3"
image = "0.25.9"
qrcode = "0.14.1"
rand = { version = "0.8", features = ["getrandom"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde_json = "1.0.145"
